--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,4 @@
-xcuserdata/
-
-## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
-*.xcscmblueprint
-*.xccheckout
-
-## compatibility with Xcode 3 and earlier (ignoring not required starting Xcode 4)
-build/
-DerivedData/
-*.moved-aside
+# Xcode
 *.pbxuser
 !default.pbxuser
 *.mode1v3
@@ -16,3 +7,15 @@ DerivedData/
 !default.mode2v3
 *.perspectivev3
 !default.perspectivev3
+*.moved-aside
+DerivedData
+.idea/
+*.xccheckout
+*.moved-aside
+xcuserdata/
+*.hmap
+*.ipa
+*.xcworkspace
+*.xcuserstate // <--- Here
+!default.xcworkspace
+*/xcuserdata/*
